ci(jwt): customize wiremock with a local jwt issuer implementation